Update OCR-processing api, Add OCR-results api
